SERVER-62272 : Migration OK for chunks existing before schema validator

(cherry picked from commit bc1ac6fb2eb66202d1acc08d158b102c57beabbd)